# zettelkasten-rag

./: README.md  pyproject.toml
rag/: agent.py
rag/shared_libraries/: create_second_brain.py
